--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
+  "scripts": {
+    "start": "node app.js",
+    "test": "jest"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "bcrypt": "^5.0.0"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "jest-fetch-mock": "^3.0.3"
   }
 }
