--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,30 @@
-version: '3'
+version: '3.8'
 
 services:
   mysql:
-    image: mysql:latest
+    image: mysql:8.2.0
     environment:
       MYSQL_DATABASE: your_database
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: your_username
       MYSQL_PASSWORD: your_password
-      MYSQL_ROOT_PASSWORD: root_password
     ports:
-      - "3306:3306"
+      - 3306:3306
     networks:
       - mynetwork
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    restart: unless-stopped
 
   nodeapp:
     build: .
     depends_on:
       - mysql
     ports:
-      - "3000:3000"
+      - 8080:8080
     networks:
       - mynetwork
+    restart: unless-stopped
 
 networks:
   mynetwork:
